# oop-lab-mai-v19-3

./: CMakeLists.txt  figures.cpp  figures.h  l3.cpp  test.cpp
